# ScrumJET

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ScrumJET_Analysis.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  email.py  errors.py  models.py  routes.py
app/blueprints/admin/: routes.py
app/blueprints/articles/: routes.py
app/blueprints/articles/templates/: article_list.html
app/blueprints/auth/: forms.py  routes.py
app/blueprints/courses/: routes.py
app/blueprints/courses/templates/: course_list.html
app/blueprints/events/: routes.py
app/blueprints/events/templates/: event_list.html
app/blueprints/main/: routes.py
app/static/css/: main.css
app/static/js/: main.js
app/templates/: base.html  index.html
app/templates/articles/: article_detail.html  article_list.html
app/templates/auth/: change_password.html  profile.html  register.html  reset_password.html  reset_password_request.html
app/templates/courses/: course_detail.html  course_list.html
app/templates/email/: confirm_email.html  confirm_email.txt  reset_password.html  reset_password.txt
app/templates/errors/: 403.html  404.html  500.html
app/templates/events/: event_detail.html  event_list.html
instance/: scrumjet.db
migrations/versions/: 1d4e70c653e9_update_models_with_new_features.py  494d06c09953_initial_migration_for_courses.py
scripts/: init_db.py  production_data.py  watchdog_handler.py
